feat(tokens): update color tokens pt3 (#8376)
* feat(Tag): update color tokens

* feat(Textarea): update color tokens

* feat(TextInput): update color tokens

* feat(Tile): update color tokens

* feat(TimePicker): update color tokens

* feat(Toggle): start token update

* feat(Toggle): finish token update

* feat(Tooltip): update color tokens

* feat(Treeview): update color tokens

* feat(UIShell): update a few color tokens

* feat(globals): update global scssto new color tokens

* fix(tokens): update tokens based on feedback

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -275,9 +275,9 @@
     tbody
     tr:not(.#{$prefix}--parent-row):nth-child(even)
     td {
-    background-color: $data-table-zebra-color;
-    border-top: 1px solid $data-table-zebra-color;
-    border-bottom: 1px solid $data-table-zebra-color;
+    background-color: $layer-accent;
+    border-top: 1px solid $layer-accent;
+    border-bottom: 1px solid $layer-accent;
   }
 
   .#{$prefix}--data-table--zebra
