--- a/packages/components/src/components/toolbar/_toolbar.scss
+++ b/packages/components/src/components/toolbar/_toolbar.scss
@@ -22,6 +22,7 @@ $css--helpers: true;
 /// Toolbar styles
 /// @access private
 /// @group toolbar
+// V11: Remove this component
 @mixin toolbar {
   .#{$prefix}--toolbar {
     display: flex;
