--- a/packages/components/src/components/time-picker/_time-picker.scss
+++ b/packages/components/src/components/time-picker/_time-picker.scss
@@ -61,16 +61,17 @@
     }
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--time-picker--light .#{$prefix}--select-input {
     background-color: $field-02;
 
     &:hover {
-      background-color: $hover-ui;
+      background-color: $field-hover;
     }
 
     &:disabled,
     &:hover:disabled {
-      color: $disabled-02;
+      color: $text-disabled;
       background-color: transparent;
       border-bottom: 1px solid transparent;
       cursor: not-allowed;
