--- a/packages/components/src/components/tooltip/_tooltip.scss
+++ b/packages/components/src/components/tooltip/_tooltip.scss
@@ -48,7 +48,7 @@
     margin: 0 auto;
     margin-top: 1px;
     margin-left: 50%;
-    border-color: transparent transparent $inverse-02 transparent;
+    border-color: transparent transparent $background-inverse transparent;
     border-style: solid;
     border-width: 0 rem(4px) rem(5px) rem(4px);
     content: '';
@@ -62,10 +62,10 @@
     height: rem(24px);
     margin-left: 50%;
     padding: 0 1rem;
-    color: $inverse-01;
+    color: $text-inverse;
     font-weight: 400;
     white-space: nowrap;
-    background-color: $inverse-02;
+    background-color: $background-inverse;
     border-radius: rem(2px);
     transform: translateX(-50%);
     content: attr(aria-label);
@@ -135,6 +135,7 @@
 /// @access private
 /// @deprecated
 /// @group tooltip
+// V11: possibly remove in V11
 @mixin tooltip--definition--legacy {
   .#{$prefix}--tooltip--definition {
     @include reset;
@@ -146,8 +147,8 @@
 
       position: relative;
       display: inline-flex;
-      color: $text-01;
-      border-bottom: 1px dotted $interactive-01;
+      color: $text-primary;
+      border-bottom: 1px dotted $highlight;
 
       &:hover {
         cursor: pointer;
@@ -179,7 +180,7 @@
     width: rem(208px);
     margin-top: $carbon--spacing-04;
     padding: $carbon--spacing-03 $carbon--spacing-05;
-    background: $inverse-02;
+    background: $background-inverse;
     border-radius: rem(2px);
     cursor: pointer;
     pointer-events: none;
@@ -187,7 +188,7 @@
     p {
       @include type-style('body-short-01');
 
-      color: $inverse-01;
+      color: $text-inverse;
     }
 
     .#{$prefix}--tooltip__caret {
@@ -197,7 +198,7 @@
       width: 0.6rem;
       height: 0.6rem;
       margin-left: $carbon--spacing-05;
-      background: $inverse-02;
+      background: $background-inverse;
     }
   }
 
@@ -250,6 +251,7 @@
 /// @access private
 /// @deprecated
 /// @group tooltip
+// V11: possibly remove in V11
 @mixin tooltip--icon--legacy {
   // Icon CSS only tooltip
   .#{$prefix}--tooltip--icon {
@@ -264,7 +266,7 @@
     &:hover,
     &:focus {
       svg {
-        fill: $icon-02;
+        fill: $icon-secondary;
       }
     }
 
@@ -325,7 +327,7 @@
 
     display: inline-flex;
     align-items: center;
-    color: $text-02;
+    color: $text-secondary;
 
     &:focus {
       @include focus-outline('border');
@@ -333,7 +335,7 @@
   }
 
   .#{$prefix}--tooltip__trigger svg {
-    fill: $icon-02;
+    fill: $icon-secondary;
 
     // Windows, Firefox HCM Fix
     @media screen and (-ms-high-contrast: active),
@@ -354,7 +356,7 @@
     &:focus {
       @include focus-outline('border');
 
-      fill: $hover-primary;
+      fill: $button-primary-hover;
     }
   }
 
@@ -378,9 +380,9 @@
     max-width: rem(288px);
     margin-top: $carbon--spacing-02;
     padding: $carbon--spacing-05;
-    color: $inverse-01;
+    color: $text-inverse;
     word-wrap: break-word;
-    background: $inverse-02;
+    background: $background-inverse;
     border-radius: rem(2px);
 
     // Windows, Firefox HCM Fix
@@ -391,9 +393,11 @@
     }
 
     // @todo this can be deprecated in v11 since focus should always be on the content container not the tooltip
+    // V11: remove in V11
     &:focus {
       outline: 0;
-      box-shadow: inset 0 0 0 1px $inverse-02, inset 0 0 0 2px $ui-background;
+      box-shadow: inset 0 0 0 1px $background-inverse,
+        inset 0 0 0 2px $background;
     }
 
     &.#{$prefix}--tooltip--top.#{$prefix}--tooltip--align-start,
@@ -457,27 +461,27 @@
     }
 
     .#{$prefix}--btn:focus {
-      border-color: $inverse-focus-ui;
-      outline-color: $inverse-02;
+      border-color: $focus-inverse;
+      outline-color: $background-inverse;
     }
 
     .#{$prefix}--link {
-      color: $inverse-link;
+      color: $link-inverse;
       font-size: rem(14px);
 
       &:focus {
-        outline: 1px solid $inverse-focus-ui;
+        outline: 1px solid $focus-inverse;
         outline-offset: 2px;
       }
 
       &:active,
       &:active:visited,
       &:active:visited:hover {
-        color: $inverse-01;
+        color: $text-inverse;
       }
 
       &:visited {
-        color: $inverse-link;
+        color: $link-inverse;
       }
     }
 
@@ -497,7 +501,7 @@
       height: 0;
       margin: 0 auto;
       border-right: $caret-size solid transparent;
-      border-bottom: $caret-size solid $inverse-02;
+      border-bottom: $caret-size solid $background-inverse;
       border-left: $caret-size solid transparent;
       content: '';
     }
@@ -567,13 +571,13 @@
   .#{$prefix}--tooltip__trigger.#{$prefix}--tooltip__trigger--definition {
     @include type-style('label-01');
 
-    border-bottom: rem(1px) dotted $text-02;
+    border-bottom: rem(1px) dotted $icon-secondary;
     transition: border-color $duration--fast-02;
   }
 
   .#{$prefix}--tooltip__trigger.#{$prefix}--tooltip__trigger--definition:hover,
   .#{$prefix}--tooltip__trigger.#{$prefix}--tooltip__trigger--definition:focus {
-    border-bottom-color: $interactive-04;
+    border-bottom-color: $interactive;
   }
 
   .#{$prefix}--tooltip__trigger.#{$prefix}--tooltip__trigger--definition.#{$prefix}--tooltip--top {
@@ -621,7 +625,7 @@
     &:hover,
     &:focus {
       svg {
-        fill: $icon-02;
+        fill: $icon-secondary;
 
         // Windows, Firefox HCM Fix
         @media screen and (-ms-high-contrast: active),
