--- a/packages/components/src/globals/scss/_css--helpers.scss
+++ b/packages/components/src/globals/scss/_css--helpers.scss
@@ -32,9 +32,9 @@
     @include reset;
     @include type-style('body-short-01');
 
-    color: $text-01;
+    color: $text-primary;
     line-height: 1;
-    background-color: $ui-background;
+    background-color: $background;
   }
 }
 
